# Hermes_Rust_Operit_App

./: .gitattributes  .gitignore  ANALYSIS_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_天阶功法.html  ARCHITECTURE_天阶功法.md  Cargo.toml  FULL_COMPARISON_MATRIX.md  HermesApp-Rust 重构思路参考.md  IMPLEMENTATION_BLUEPRINT.md  README.md  SESSION_HANDOFF.md  STATUS.md  libmod.rmeta
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml
.understand-anything/: meta.json
Learning/: 01-Understand-Anything-学习报告.md  01-hermes-agent-rs-Rust Agent 引擎.md  01-★★★★★-hermes-agent-rs-Rust Agent 引擎.md  02-OpenHuman-UA分析报告.md  02-OpenHuman-记忆系统.md  02-Operit-Android宿主平台.md  02-★★★★★-Operit-Android宿主平台.md  03-Hermes-Agent-Ultra-安全策略.md  03-HermesAgentUltra-UA分析报告.md  03-HermesApp-Kotlin参考实现.md  03-★★★★★-Understand_Anything_Rust-代码分析引擎.md  04-TabbyML-代码助手.md  04-Understand_Anything_Rust-代码分析引擎.md  05-Operit_MCPS-MCP插件集.md  05-Qdrant-向量搜索.md  05-★★★★★-HermesApp-前台服务.md  05-★★★★★-rtk-LLM Token优化代理.md  06-Activepieces-MCP注册表.md  06-rtk-LLM Token优化代理.md  06-★★★★★-obscura-无头浏览器.md  07-obscura-无头浏览器.md  07-rtk-cc-switch-优化与路由.md  07-★★★★★-openhuman-记忆系统.md  08-oxideterm-AI终端.md  08-★★★★★-EmbedAnything-candle-本地ML.md  09-codex-mobile-iHermes-移动端.md  09-qdrant-向量数据库.md  09-★★★★★-HermesApp-无障碍服务.md  09-★★★★★-openhuman-记忆系统.md  09-★★★★★-sherpa-onnx-语音引擎.md  10-cc-switch-AIAgent桌面中心.md  10-yazi-文件系统-servo-浏览器.md  10-★★★★★-Dioxus-RustUI框架.md  10-★★★★★-Operit_MCPS-MCP插件集.md  11-openclaw-多供应商代理架构.md  11-★★★★★-HermesApp-Shizuku系统权限.md  12-nushell-结构化Shell管道.md  12-sherpa-onnx-语音引擎.md  12-★★★★-HermesApp-Kotlin参考实现.md  12-★★★★★-RMCP-官方MCP-Rust-SDK.md  (+101 more)
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/operit/hermes/: HermesApplication.kt  MainActivity.kt
android/app/src/main/java/com/operit/hermes/bridge/: HermesBridge.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
scripts/: setup.sh
src/: android_main.rs  lib.rs  main.rs
src/android/: accessibility.rs  clipboard.rs  foreground.rs  jni.rs  mod.rs  notification.rs  shizuku.rs  webview.rs
src/android/java/com/operit/hermes/: MainActivity.java  WebViewHelper.java
src/core/: agent.rs  config.rs  guard.rs  memory.rs  mod.rs  provider.rs  redact.rs  tool_registry.rs
src/environment/: mod.rs  proot.rs  sandbox.rs
src/mcp/: client.rs  manager.rs  mod.rs
src/store/: index.rs  installer.rs  manager.rs  mod.rs
src/tools/: browser.rs  codebase_analyzer.rs  cronjob.rs  filesystem.rs  markdown.rs  mod.rs  process.rs  speech.rs  terminal.rs  vision.rs  web.rs
src/ui/: app.rs  chat.rs  login.rs  market.rs  memory_view.rs  mod.rs  settings.rs  store_page.rs  toolbox.rs
src/ui/components/: copy_button.rs  message_bubble.rs  mod.rs  plugin_card.rs
tests/: agent_integration.rs  sandbox_tests.rs  store_tests.rs
