[package]
name = "hermes_rust_operit_app"
version = "0.3.0"
edition = "2021"
description = "纯 Rust 重构的 Operit Android 应用 — 高性能 AI 助手工具链"

[package.metadata.android]
package_name = "com.operit.hermes"
apk_name = "HermesOperit"
target_sdk_version = 34
min_sdk_version = 26
activity_name = "android.app.NativeActivity"
features = ["android.hardware.touchscreen"]

[package.metadata.android.signing.debug]
path = "debug.keystore"
keystore_password = "android"
key_alias = "androiddebugkey"
key_password = "android"

[lib]
name = "hermes_operit_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hermes_operit_app"
path = "src/main.rs"

# ═══ 纯 Rust 依赖 ═══
[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Code Analysis (Understand_Anything_Rust)
ua-core = { path = "../Understand_Anything_Rust/crates/ua-core" }

# Database
redb = "1"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
once_cell = "1"
directories = "5"

# Filesystem tools
walkdir = "2"
flate2 = "1"
zip = { version = "0.6", default-features = false, features = ["deflate", "time"] }
regex = "1"

# Cache & Search
moka = { version = "0.12", features = ["future", "sync"] }
scraper = "0.27"
sha2 = "0.10"
tantivy = { version = "0.26", default-features = false, features = ["mmap"] }

# MCP Protocol
rmcp = "2.2"

# HTTP
reqwest = { version = "0.13", default-features = false, features = ["json", "blocking", "rustls"] }

# OAuth
oauth2 = { version = "4.4", default-features = false, features = ["reqwest"] }
dioxus = { version = "0.5", features = ["html"] }

# Android: 取消下面注释 + 安装 NDK 后执行:
#   rustup target add aarch64-linux-android
#   cargo install cargo-ndk
#   cargo ndk -t aarch64-linux-android -p 26 build --release
#   → 输出: target/aarch64-linux-android/release/libhermes_operit_core.so
#   → 配合 Dioxus CLI: dx build --platform android

# Windows 本地测试:
#   cargo build --release
#   ./target/release/hermes_operit_app.exe

# Android JNI bridge (纯 Rust, 仅在 Android 目标编译)
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", features = ["invocation"] }
dioxus-mobile = "0.5"
ndk-glue = "0.7"
android_logger = "0.14"

[profile.release]
lto = true
opt-level = "s"
strip = true
codegen-units = 1
